# vimscript-haskell

./: .gitignore  LICENSE  README.md  default.nix  experiments.vim  shell.nix  test.sh  vimscript-haskell.cabal
lua/: whid.lua
nix/: sources.json
src/: Main.hs
src/Vim/: Expression.hs  Run.hs  Test.hs
test/: ExpressionSpec.hs  Spec.hs
