cabal-version:       2.4
name:                vimscript-haskell
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Marcelo Lazaroni
maintainer:          Marcelo Lazaroni
category:            Language
extra-source-files:  README.md

executable vimscript-haskell-exe
  main-is:          src/Main.hs
  build-depends:
    vimscript-haskell
    , base
  default-language: Haskell2010

library
  exposed-modules:
    Vim.Expression
  --other-modules:
  ghc-options:         -Wall -Wno-partial-type-signatures
  build-depends:       base
                       , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

