cabal-version:       2.4
name:                vimscript-haskell
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Marcelo Lazaroni
maintainer:          Marcelo Lazaroni
category:            Language
extra-source-files:  README.md

executable vimscript-haskell-exe
  main-is:          src/Main.hs
  build-depends:
      vimscript-haskell
    , base
    , mtl
  default-language: Haskell2010

library
  exposed-modules:
    Vim.Expression
    Vim.Run
  --other-modules:
  ghc-options:         -Wall -Wno-partial-type-signatures
  build-depends:
      base
    , mtl
    , process
    , directory
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite vimscript-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ExpressionSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    vimscript-haskell
    , base
    , hspec
    , hspec-expectations
    , mtl
    , QuickCheck >= 2.13.2
  default-language: Haskell2010
